apps/sample-nginx/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nginx
  labels:
    app: sample-nginx
spec:
  type: ClusterIP
  selector:
    app: sample-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
